# retto

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: build-publish.yml  build.yml  check.yml
.github/workflows/setup-env/: action.yml
retto-cli/: Cargo.toml
retto-cli/src/: main.rs
retto-core/: Cargo.toml  build.rs
retto-core/src/: error.rs  hf_hub_helper.rs  image_helper.rs  lib.rs  points.rs  processor.rs  serde.rs  session.rs  worker.rs
retto-core/src/processor/: cls_processor.rs  det_processor.rs  rec_processor.rs
retto-core/src/worker/: ort_worker.rs
retto-wasi/: Cargo.toml
retto-wasi/.cargo/: config.toml
retto-wasi/src/: main.rs
retto-wasm/: Cargo.toml
retto-wasm/.cargo/: config.toml
retto-wasm/fe/: index.ts  package.json  pnpm-lock.yaml  rolldown.config.ts  tsconfig.json
retto-wasm/src/: macros.rs  main.rs  wasm_lib.rs
