[workspace]
resolver = "2"
members = ["retto-cli", "retto-core", "retto-wasi"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
paste = "1.0.15"
walkdir = "2.5.0"
anyhow = "1.0.98"
thiserror = "2.0.12"
once_cell = "1.21.3"
serde = "1.0.219"
serde_json = "1.0.140"
clap = { version = "4.5.40", features = ["derive"] }
rayon = "1.10.0"
ordered-float = "5.0.0"
num-traits = "0.2.19"
ndarray = "0.16.1"
ndarray-stats = "0.6.0"
image = "0.25.6"
imageproc = "0.25.0"
fast_image_resize = { version = "5.1.4", features = ["image"] }
geo = "0.30.0"
geo-types = "0.7.16"
geo-clipper = "0.9.0"
ort = { version = "=2.0.0-rc.10", default-features = false }
ort-sys = { version = "=2.0.0-rc.10", default-features = false }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[patch.crates-io]
clipper-sys = { git = "https://github.com/NekoImageLand/clipper-sys", branch = "master" }

[profile.release]
opt-level = 2
lto = true
codegen-units = 1

[profile.release.package.retto-wasi]
opt-level = "s"