[package]
name = "retto-cli"
version.workspace = true
edition.workspace = true

[dependencies]
retto-core = { path = "../retto-core", features = ["serde", "backend-ort"] }
walkdir.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true

[features]
hf-hub = ["retto-core/hf-hub"]
backend-ort-cuda = ["retto-core/backend-ort-cuda"]
backend-ort-directml = ["retto-core/backend-ort-directml"]