[package]
name = "retto-core"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror.workspace = true
ordered-float.workspace = true
num-traits.workspace = true
ndarray.workspace = true
ndarray-stats.workspace = true
image.workspace = true
imageproc.workspace = true
fast_image_resize.workspace = true
geo.workspace = true
geo-types.workspace = true
geo-clipper.workspace = true
ort.workspace = true
tracing.workspace = true