[package]
name = "retto-core"
version = "0.1.0"
edition = "2024"

[dependencies]
paste.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
rayon.workspace = true
ordered-float.workspace = true
num-traits.workspace = true
ndarray.workspace = true
ndarray-stats.workspace = true
image.workspace = true
imageproc.workspace = true
fast_image_resize.workspace = true
geo.workspace = true
geo-types.workspace = true
geo-clipper.workspace = true
ort = { workspace = true, default-features = false }
ort-sys = { workspace = true, default-features = false } # https://github.com/pykeio/ort/issues/399
tracing.workspace = true

[features]
serde = ["dep:serde", "serde/default", "dep:serde_json", "serde_json/default", "ordered-float/serde", "ndarray/serde"]
backend-ort = ["ort/default"]
backend-ort-cuda = ["backend-ort", "ort/cuda"]
backend-ort-directml = ["backend-ort"]
backend-ort-wasi = ["backend-ort"]