[package]
name = "retto-core"
version.workspace = true
edition.workspace = true

[dependencies]
paste.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
rayon.workspace = true
ordered-float.workspace = true
num-traits.workspace = true
ndarray.workspace = true
ndarray-stats.workspace = true
image.workspace = true
imageproc.workspace = true
fast_image_resize.workspace = true
geo.workspace = true
geo-types.workspace = true
geo-clipper.workspace = true
ort = { workspace = true, optional = true, default-features = false }
ort-sys = { workspace = true, optional = true, default-features = false } # https://github.com/pykeio/ort/issues/399
tracing.workspace = true
hf-hub = { workspace = true, optional = true }

[dev-dependencies]
reqwest = { workspace = true, features = ["blocking"] }
ab_glyph.workspace = true
rstest.workspace = true
anyhow.workspace = true
once_cell.workspace = true

[build-dependencies]
hf-hub.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
serde = ["dep:serde", "dep:serde_json", "ordered-float/serde", "ndarray/serde"]
download-models = []
hf-hub = ["dep:hf-hub"]
backend-ort = ["ort/default"]
backend-ort-cuda = ["backend-ort", "ort/cuda"]
backend-ort-directml = ["backend-ort"]
backend-ort-wasm = ["backend-ort"]